--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -1,4 +1,4 @@
-﻿#注意：如果在记事本上编写，下面的缩进不要使用Tab来缩进，不然报错
+#注意：如果在记事本上编写，下面的缩进不要使用Tab来缩进，不然报错
 spring:
   profiles:
     active: dev # 激活开发环境配置
@@ -44,7 +44,7 @@ mybatis:
 spring:
   profiles: prod # 生产环境
   application:
-    name: microservice-product-config128			# ******服务名*******
+    name: microservice-product-config			# ******服务名*******
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -66,6 +66,6 @@ eureka:
   instance:
     instanceId: ${spring.application.name}:${server.port}
     prefer-ip-address: true 
-
+    
 emp:
-  name: zhan24343
+  name:78434
